syntax = "proto3";

package com.road.yishi.proto.campaign;

message RankListRspMsg {
  repeated int32 rankInfo = 1;
}
